# sc25-evaluation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
autogen/: academy.py  autogen_client.py  autogen_host.py
bench/: argparse.py  launcher.py  parsl.py  results.py
bench/action_chain/: __main__.py  agent.py  run.py
bench/action_latency/: __main__.py  actor.py  run.py
bench/action_throughput/: __main__.py  actor.py  run.py
bench/exchange_perf/: __main__.py  agent.py  run.py
bench/launch_latency/: __main__.py  actor.py  aeris.py  run.py  utils.py
bench/memory_overhead/: __main__.py  run.py
data/bench/action-chain-v1/2025-04-05-19-25-59/: results.csv
data/bench/action-chain-v1/2025-04-05-19-33-18/: results.csv
data/bench/action-latency-v3/2025-03-14-19-19-14/: results.csv
data/bench/action-latency-v3/2025-03-14-19-20-52/: results.csv
data/bench/action-latency-v3/2025-03-14-19-22-56/: results.csv
data/bench/action-latency-v3/2025-04-08-00-49-00/: results.csv
data/bench/action-throughput-v1/2025-03-14-22-50-02/: results.csv
data/bench/action-throughput-v1/2025-03-14-22-50-43/: results.csv
data/bench/action-throughput-v1/2025-03-14-22-52-22/: results.csv
data/bench/action-throughput-v1/2025-03-14-22-56-12/: results.csv
data/bench/action-throughput-v1/2025-03-14-22-56-47/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-01-13/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-05-27/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-06-08/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-09-37/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-15-51/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-16-37/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-22-09/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-37-27/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-38-27/: results.csv
data/bench/action-throughput-v1/2025-03-14-23-48-04/: results.csv
data/dml/: collated.csv
data/mofa/01Apr25144707/: log-assembler.txt  log-database.txt  log-estimator.txt  log-main.txt  log-optimizer.txt
data/mofa/29Mar25222227/: log-assembler.txt  log-database.txt  log-estimator.txt  log-main.txt  log-optimizer.txt
notebooks/: 01-actor-launch-latency.ipynb  02-actor-action-latency.ipynb  02-weak-scaling.ipynb  03-actor-action-throughput.ipynb  03-exchange-ablation.ipynb  04-action-chain.ipynb  04-actor-memory-overhead.ipynb  05-exchange-ablation.ipynb  05-mailbox-multiplex.ipynb  06-action-chain.ipynb  06-actor-action-latency.ipynb  07-actor-action-throughput.ipynb  07-mailbox-multiplex.ipynb  08-autogen.ipynb  08-weak-scaling.ipynb  09-actor-memory-overhead.ipynb  09-mofa.ipynb  10-mofa.ipynb  11-decentralized-ml.ipynb  11-mcq.ipynb  12-decentralized-ml.ipynb  12-mcq.ipynb  matplotlibrc  requirements.txt
scripts/: README.md  setup_dask_aurora.sh  setup_ray_aurora.sh  submit_aurora_action_latency.sh  submit_aurora_action_throughput.sh  submit_aurora_launch_latency.sh  submit_aurora_memory_overhead.sh  submit_aurora_weak_scaling.sh
(+107 files in other folders)
